Implement fiat price calculation

--- a/src/components/index-page/VideoNFTs/style.scss
+++ b/src/components/index-page/VideoNFTs/style.scss
@@ -145,7 +145,7 @@
     }
 
     &__items {
-      // @include animate-carousel($carousel-gap, 25s);
+      @include animate-carousel($carousel-gap, 25s);
 
       display: flex;
       flex-shrink: 0;
