Add missing hover on video nfts component

--- a/src/components/index-page/VideoNFTs/style.scss
+++ b/src/components/index-page/VideoNFTs/style.scss
@@ -163,6 +163,10 @@
       height: 374px;
       background-color: $c_ebony-clay;
 
+      &:hover {
+        background-color: rgba(red(#5c6475), green(#5c6475), blue(#5c6475), 25%);
+      }
+
       &__image {
         width: 100%;
         height: 162px;
