--- a/src/pages/community/style.scss
+++ b/src/pages/community/style.scss
@@ -87,6 +87,10 @@
         width: 32px;
       }
 
+      & > img {
+        width: 32px;
+      }
+
       &--twitter {
         background-color: rgba(29, 155, 240, .15);
 
@@ -119,6 +123,10 @@
 
       &--handbook {
         background-color: rgba(54, 129, 252, .1);
+      }
+
+      &--telegram {
+        background-color: rgba(29, 155, 240, .15);
       }
 
       &--element {
@@ -274,6 +282,10 @@
       &__icon {
         width: 40px;
         height: 40px;
+
+        & > img {
+          width: 28px;
+        }
       }
     }
   }
