--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -1,5 +1,11 @@
 @import '../../../styles/_main';
 
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
 .QuarterPanel__main {
   display: grid;
   flex-direction: column;
@@ -9,24 +15,47 @@
   grid-template-columns: repeat(3, 1fr);
 
   &__title {
+    position: relative;
     display: flex;
     align-items: end;
     flex-direction: column;
     width: 182px;
     margin-top: 20px;
     text-align: right;
+
+    &--active {
+      $active_color: #000;
+    }
   }
 
   &__subtitle {
+    position: relative;
     width: 160px;
     height: 48px;
     font-size: 40px;
     text-align: right;
+
+    &--active {
+      position: fixed;
+      bottom: 300px;
+      color: blue;
+    }
+
+    &--hidden {
+      color: antiquewhite;
+    }
   }
 
   &__quarters {
+    position: relative;
     font-size: 32px;
     color: $c_gray_500;
+
+    &--active {
+      position: fixed;
+      bottom: 280px;
+      color: blue;
+    }
   }
 
   &__subtitle__loading {
@@ -56,6 +85,19 @@
     width: 4px;
     height: -webkit-fill-available;
     background-color: $c_neutral-200;
+
+    &__dot {
+      width: 24px;
+      height: 24px;
+      background-color: $c_neutral-200;
+      border-radius: 50%;
+
+      &--active {
+        position: fixed;
+        bottom: 300px;
+        background-color: blue;
+      }
+    }
   }
 
   &__panel__loading {
@@ -106,5 +148,30 @@
     align-items: end;
     flex-direction: column;
     padding: 10px 0;
+  }
+}
+
+.scroll-element {
+  position: relative;
+  overflow: hidden;
+}
+
+.scroll-element > div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(0);
+  animation: scroll 10s linear infinite;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateY(0);
+  }
+
+  100% {
+    transform: translateY(-100%);
   }
 }
