--- a/src/components/verification-page/style.scss
+++ b/src/components/verification-page/style.scss
@@ -1,23 +1,29 @@
 @import '../../styles/main';
 @import '../../pages/style.scss';
 
+@mixin verification-card {
+  display: flex;
+  width: 676px;
+  padding: 24px;
+  overflow: hidden;
+  background-color: #bcd5fa14;
+  border-radius: 8px;
+}
+
 .VerificationPage {
   display: flex;
   // justify-content: center;
   align-items: center;
   flex-direction: column;
   min-height: 100vh;
+  padding: 32px 0;
   background-color: $c_black;
 
   &__member-card {
+    @include verification-card;
+
     position: relative;
-    display: flex;
-    width: 676px;
     height: 128px;
-    margin-top: 32px;
-    padding: 24px;
-    background-color: rgba(red(#bcd5fa14), green(#bcd5fa14), blue(#bcd5fa14), 8%);
-    border-radius: 8px;
 
     &__avatar {
       width: 80px;
@@ -50,22 +56,37 @@
         color: #b5c1c9;
       }
     }
+
+    &__verified {
+      &__circle {
+        @include rotate-360();
+
+        position: absolute;
+        top: -8px;
+        right: 7px;
+      }
+
+      &__tick {
+        position: absolute;
+        top: 0;
+        right: 53px;
+        bottom: 0;
+        margin: auto;
+      }
+    }
   }
 
   &__social-card {
-    display: flex;
-    width: 676px;
+    @include verification-card;
+
     height: 98px;
     margin-top: 24px;
-    padding: 24px;
-    background-color: rgba(red(#bcd5fa14), green(#bcd5fa14), blue(#bcd5fa14), 8%);
-    border-radius: 8px;
 
     &__icon {
       display: grid;
       width: 48px;
       height: 48px;
-      background-color: rgba(red(#6f6f6f26), green(#6f6f6f26), blue(#6f6f6f26), 25%);
+      background-color: #6f6f6f26;
       border-radius: 50%;
       place-items: center;
 
@@ -102,6 +123,110 @@
         margin-top: 2px;
         font-weight: 600;
         color: #f4f6f8;
+      }
+    }
+  }
+
+  &__safety-card {
+    @include verification-card;
+
+    flex-direction: column;
+    height: 480px;
+    margin-top: 24px;
+
+    &__top {
+      display: flex;
+      justify-content: space-between;
+
+      &__title {
+        @include h5;
+
+        font-weight: 600;
+        color: #f4f6f8;
+      }
+
+      &__report-button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 157px;
+        height: 32px;
+        cursor: pointer;
+        background-color: #bcd5fa14;
+        border: 1px solid #bbd9f621;
+        border-radius: 2px;
+
+        &__text {
+          @include base-5;
+
+          margin-left: 8px;
+          font-weight: 700;
+          letter-spacing: normal;
+          color: #f4f6f8;
+        }
+      }
+    }
+
+    &__subtitle {
+      @include h9;
+
+      margin-top: 16px;
+      color: #b5c1c9;
+    }
+
+    &__list-container {
+      margin-top: 24px;
+
+      &__content {
+        &__top {
+          display: flex;
+          align-items: center;
+
+          &__icon {
+            display: grid;
+            width: 40px;
+            height: 40px;
+            padding: 8px;
+            border-radius: 50%;
+            place-items: center;
+
+            &--forbidden {
+              background-color: #f2585826;
+            }
+
+            &--allowed {
+              background-color: #0c984626;
+            }
+          }
+
+          &__title {
+            @include h8;
+
+            margin-left: 16px;
+            font-weight: 600;
+            letter-spacing: .5%;
+            color: #f4f6f8;
+
+            &__text {
+              &--allowed {
+                color: #0c9846;
+              }
+
+              &--forbidden {
+                color: #ff695f;
+              }
+            }
+          }
+        }
+
+        &__list-item {
+          @include h9;
+
+          margin-bottom: 8px;
+          margin-left: 56px;
+          color: #f4f6f8;
+          list-style-type: disc;
+        }
       }
     }
   }
