--- a/src/styles/common/_utils.scss
+++ b/src/styles/common/_utils.scss
@@ -6,14 +6,14 @@
   @return map-get($map, $key);
 }
 
-@mixin rotate-360 {
+@mixin rotate-360-at-scale($scale: 1) {
   @keyframes rotate-360 {
     0% {
-      transform: rotate(0deg);
+      transform: rotate(0deg) scale($scale);
     }
 
     100% {
-      transform: rotate(360deg);
+      transform: rotate(360deg) scale($scale);
     }
   }
 
