--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -1,9 +1,20 @@
-@import '../../../styles/_main';
+@import "../../../styles/_main";
+
+$offsetTop: 600px;
 
 * {
   margin: 0;
   padding: 0;
   border: 0;
+}
+
+.QuarterPanel__submain {
+  display: grid;
+  flex-direction: column;
+  width: 818px;
+  gap: 30px;
+  grid-gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .QuarterPanel__main {
@@ -14,7 +25,7 @@
   grid-gap: 10px;
   grid-template-columns: repeat(3, 1fr);
 
-  &__title {
+  &__rigth {
     position: relative;
     display: flex;
     align-items: end;
@@ -22,9 +33,20 @@
     width: 182px;
     margin-top: 20px;
     text-align: right;
+  }
+
+  &__title {
+    position: relative;
+
+    align-items: end;
+    flex-direction: column;
+    text-align: right;
+    opacity: 40%;
 
     &--active {
-      $active_color: #000;
+      opacity: 100%;
+      position: fixed;
+      bottom: $offsetTop;
     }
   }
 
@@ -34,28 +56,12 @@
     height: 48px;
     font-size: 40px;
     text-align: right;
-
-    &--active {
-      position: fixed;
-      bottom: 300px;
-      color: blue;
-    }
-
-    &--hidden {
-      color: antiquewhite;
-    }
   }
 
   &__quarters {
     position: relative;
     font-size: 32px;
     color: $c_gray_500;
-
-    &--active {
-      position: fixed;
-      bottom: 280px;
-      color: blue;
-    }
   }
 
   &__subtitle__loading {
@@ -94,8 +100,8 @@
 
       &--active {
         position: fixed;
-        bottom: 300px;
-        background-color: blue;
+        bottom: $offsetTop;
+        background: #4038ff;
       }
     }
   }
@@ -116,6 +122,10 @@
     background: white;
     border-radius: 4px;
     gap: 16px;
+    opacity: 40%;
+    &--active {
+      opacity: 100%;
+    }
 
     &__title {
       //styleName: h7;
@@ -149,6 +159,45 @@
     flex-direction: column;
     padding: 10px 0;
   }
+
+  // @media #{$screen-max-sm} {
+  //   &__panel {
+  //     gap: 1px;
+  //     width: 227px;
+  //   }
+  //   &__timeline {
+  //     width: 40px;
+  //   }
+  //   &__rigth {
+  //     width: auto;
+  //   }
+  // }
+
+  // @media #{$screen-sm} {
+  //   &__panel {
+  //     gap: 1px;
+  //     width: 227px;
+  //   }
+  //   &__timeline {
+  //     width: 40px;
+  //   }
+  //   &__rigth {
+  //     width: auto;
+  //   }
+  // }
+
+  // @media (max-width: 550px) {
+  //   &__panel {
+  //     gap: 1px;
+  //     width: 227px;
+  //   }
+  //   &__timeline {
+  //     width: 40px;
+  //   }
+  //   &__rigth {
+  //     width: auto;
+  //   }
+  // }
 }
 
 .scroll-element {
