--- a/src/components/roadmap-page/Quarters/style.scss
+++ b/src/components/roadmap-page/Quarters/style.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/_main';
+@import "../../../styles/_main";
 
 .Quarters {
   background-color: $c_catskill_white;
@@ -18,7 +18,7 @@
     display: initial;
     color: inherit;
     text-align: right;
-    transition: transform .3s;
+    transition: transform 0.3s;
 
     &--active {
       transform: rotate(180deg);
@@ -53,7 +53,7 @@
       justify-content: flex-end;
       color: inherit;
       text-align: right;
-      transition: transform .3s;
+      transition: transform 0.3s;
     }
 
     &__dropdown {
@@ -127,7 +127,7 @@
       font-family: $font-secondary;
       font-size: 14px;
       line-height: 20px;
-      letter-spacing: -.4000000059604645px;
+      letter-spacing: -0.4000000059604645px;
       color: #a7aeb7;
       text-align: center;
     }
@@ -160,14 +160,6 @@
 
     &--active {
       display: block;
-    }
-  }
-
-  @media #{$screen-max-lg} {
-    &__section {
-      &--socials {
-        margin-right: 0;
-      }
     }
   }
 
@@ -214,8 +206,9 @@
       }
 
       &__button {
-        width: auto;
-        margin-top: 12px;
+        width: -webkit-fill-available;
+        padding: 0 30px;
+        margin: 12px 10px;
         color: $c_blue-ribbon;
         border: 2px solid $c_blue-ribbon;
       }
