--- a/src/components/glossary-page/Glosaary_head/style.scss
+++ b/src/components/glossary-page/Glosaary_head/style.scss
@@ -1,6 +1,6 @@
 .GlossaryHead {
   height: 44px;
-  padding: 0px 0px 16px 0px;
-  border: 0px 0px 1px 0px;
+  padding: 0 0 16px 0;
+  border: 0 0 1px 0;
   gap: 8px;
 }
