--- a/src/components/glossary-page/style.scss
+++ b/src/components/glossary-page/style.scss
@@ -1,3 +1,7 @@
-.GlossaryHead {
-  background-color: beige;
+.Glossary {
+  display: grid;
+  padding: 80px 99px 80px 99px;
+  color: white;
+  background: #0b0c0f;
+  gap: 64px;
 }
