--- a/src/components/glossary-page/Glossary_body/style.scss
+++ b/src/components/glossary-page/Glossary_body/style.scss
@@ -119,6 +119,17 @@
     border-radius: 4px;
     gap: 16px;
     // grid-template-areas: ;
+    &__title {
+      margin: 8px;
+      //styleName: h7;
+      font-family: $font-primary;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 28px;
+      letter-spacing: 0;
+      text-align: left;
+    }
+
     &__item {
       display: inline-block;
       width: fit-content;
@@ -136,6 +147,9 @@
       background: #5c6475;
       border-radius: 8px;
     }
+  }
+  @media (max-width: 1024px) {
+    grid-template-columns: 1fr;
   }
 }
 
