--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -19,3 +19,4 @@ $navbar-height: 80px;
 $font-primary: PxGroteskRegular, sans-serif;
 $font-secondary: Inter, sans-serif;
 $font-ibm-mono: IBM Plex Mono, sans-serif;
+$font-ibm-sans: IBM Plex Sans, sans-serif;
