--- a/src/components/Tooltip/style.scss
+++ b/src/components/Tooltip/style.scss
@@ -3,6 +3,7 @@
 
   .tooltip {
     position: absolute;
+    width: -webkit-fill-available;
     margin: 0 10px;
     padding: 10px;
     color: #fff;
@@ -10,17 +11,18 @@
     border-radius: 5px;
     opacity: 0;
     transform: translateY(-100%);
-    transition: opacity 0.3s ease-in-out;
-    clip-path: polygon(
-      0% 0%,
-      100% 0%,
-      100% calc(100% - 6px),
-      100% 100%,
-      calc(100% - 8px) calc(100% - 6px),
-      0% calc(100% - 6px)
-    );
+    transition: opacity .3s ease-in-out;
+    clip-path:
+      polygon(
+        0% 0%,
+        100% 0%,
+        100% calc(100% - 6px),
+        100% 100%,
+        calc(100% - 8px) calc(100% - 6px),
+        0% calc(100% - 6px)
+      );
     justify-items: end;
-    width: -webkit-fill-available;
+
     &.visible {
       opacity: 1;
     }
