--- a/src/components/GlossaryCard/style.scss
+++ b/src/components/GlossaryCard/style.scss
@@ -1,6 +1,6 @@
-@import '../../styles/_main';
-@import '../../styles/common/colors';
-@import '../../styles/common/variables';
+@import "../../styles/_main";
+@import "../../styles/common/colors";
+@import "../../styles/common/variables";
 
 .GlossaryCard {
   max-width: (535px);
@@ -29,5 +29,6 @@
     letter-spacing: 0;
     color: $c_grayc-chateau;
     text-align: left;
+    margin-top: 8px;
   }
 }
