--- a/src/components/GlossaryCard/style.scss
+++ b/src/components/GlossaryCard/style.scss
@@ -1,6 +1,6 @@
-@import "../../styles/_main";
-@import "../../styles/common/colors";
-@import "../../styles/common/variables";
+@import '../../styles/_main';
+@import '../../styles/common/colors';
+@import '../../styles/common/variables';
 
 .GlossaryCard {
   max-width: (535px);
@@ -21,6 +21,7 @@
   }
 
   &__content {
+    margin-top: 8px;
     //styleName: Base 4;
     font-family: $font-secondary;
     font-size: 14px;
@@ -29,6 +30,5 @@
     letter-spacing: 0;
     color: $c_grayc-chateau;
     text-align: left;
-    margin-top: 8px;
   }
 }
