--- a/src/components/glossary-page/Glosaary_head/style.scss
+++ b/src/components/glossary-page/Glosaary_head/style.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/common/variables";
+@import '../../../styles/common/variables';
 
 .GlossaryHead {
   height: 44px;
@@ -8,6 +8,7 @@
   gap: 8px;
 
   &__roadmap {
+    margin-right: 10px;
     font-family: $font-secondary;
     font-size: 20px;
     font-weight: 400;
@@ -16,7 +17,6 @@
     color: #5c6475;
     text-align: left;
     cursor: pointer;
-    margin-right: 10px;
   }
 
   &__content {
