--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -36,10 +36,10 @@ $offsetTop: 200px;
     align-items: end;
     flex-direction: column;
     text-align: right;
-    opacity: 40%;
+    opacity: 0.4;
 
     &--active {
-      opacity: 100%;
+      opacity: 1;
     }
   }
 
@@ -98,7 +98,7 @@ $offsetTop: 200px;
       }
 
       &--hide {
-        opacity: 0%;
+        opacity: 0;
       }
 
       &--sticky {
